tests/fail/semantics/missing_content/main.kira
annotation State {
}

construct Widget {
    annotations {
        @State;
    }

    requires {
        content;
    }
}

Widget Card() {
}
